@@ -26,9 +26,23 @@ list of (
 	} 
 )
 */
-		
-	$name = $_REQUEST['values']['TITLE'];
-	$description = $_REQUEST['values']['DESCRIPTION'];
+	//update_calendar_event
+	if($_REQUEST['event_id']!='new')
+	{
+		//get calendar event title & description
+		$calendar_event = DBGet(DBQuery("SELECT TITLE, DESCRIPTION FROM CALENDAR_EVENTS WHERE ID='".$_REQUEST['event_id']."'"));
+	}
+
+	if(empty($_REQUEST['values']['TITLE']))
+		$name = $calendar_event[1]['TITLE'];
+	else
+		$name = $_REQUEST['values']['TITLE'];
+
+	if(empty($_REQUEST['values']['DESCRIPTION']))
+		$description = $calendar_event[1]['DESCRIPTION'];
+	else
+		$description = $_REQUEST['values']['DESCRIPTION'];
+
 	$format = 2;
 	$courseid = 1;
 	$eventtype = 'site';
